fixed dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -26,6 +26,7 @@ a:hover {
 }
 
 body {
+  background-color: white;
   margin: 0;
   display: flex;
   place-items: center;
@@ -89,7 +90,7 @@ button:focus-visible {
 
 .holy {
   animation: holy-show 30s ease;
-  border-radius: 100%;
+  border-radius: 20px;
   z-index: 1;
 
 }
